[metadata]
name = nagios_influxdb
author = Swann
author-email = swann@oopss.org
summary = Nagios plugin for InfluxDB
description-file = README.md
home-page = https://github.com/scroiset/nagios-influxdb
license = Apache-2
classifier =
    Development Status :: Beta
        Environment :: Monitoring
        Intended Audience :: Operator
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
keywords =
    nagios
    influxdb

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
pacakges =
    nagios-influxdb

[entry_points]
console_scripts =
    check_influxdb = nagios_influxdb.check_influxdb:main
